--- a/Fortran/Makefile
+++ b/Fortran/Makefile
@@ -1,7 +1,6 @@
 COLLEEN = Colleen
 GRACE = Grace
 SULLY = Sully
-SULLYPLUS = Sullyplus
 
 all: $(COLLEEN) $(GRACE) $(SULLY)
 
@@ -9,19 +8,15 @@ $(COLLEEN):
 	gfortran -o $(COLLEEN) colleen.f90
 
 $(GRACE):
-	gfortran -cpp -ffixed-line-length-205 -ffree-line-length-205 -o $(GRACE) grace.f90
+	gfortran -cpp -ffixed-line-length-205 -ffree-line-length-205 -std=legacy -o $(GRACE) grace.f90
 
 $(SULLY):
-	gfortran -cpp -Dtd -ffixed-line-length-601 -ffree-line-length-601 -o $(SULLY) sully.f90
-
-$(SULLYPLUS):
-	gfortran -cpp -ffixed-line-length-800 -ffree-line-length-800 -o $(SULLYPLUS) sullyplus.f90
+	gfortran -cpp -Dtd -ffixed-line-length-601 -ffree-line-length-601 -std=legacy -o $(SULLY) sully.f90
 
 clean:
 	rm -f $(COLLEEN)
 	rm -f $(GRACE)
 	rm -f $(SULLY)
-	rm -f $(SULLYPLUS)
 
 fclean: clean
 
